--- a/css/common.css
+++ b/css/common.css
@@ -48,7 +48,7 @@
 
 
 body {
-    background-image: url("../imgs/fancy-pants.jpg");
+    background-image: url("imgs/fancy-pants.jpg");
 }
 
 h4 {font-size: 22px;}
