--- a/where-one-citizen/css/where-one-citizen.css
+++ b/where-one-citizen/css/where-one-citizen.css
@@ -299,7 +299,8 @@ a.repeat:hover {
 }*/
 
 #news-display-box {
-    
+    display: None;
+
     /*position: absolute;*/
     left: 0;
     top: 0;
@@ -511,6 +512,7 @@ a.repeat:hover {
 
 
 
+
 @media (max-width: 650px) {
     .center-div {
         /*bottom: 18%;*/
@@ -549,8 +551,9 @@ a.repeat:hover {
     }
     
     .center-div {
-        width: 90%;
+        width: 95%;
         font-size: 10px;
+        
     }
 
 
