--- a/where-one-citizen/css/where-one-citizen.css
+++ b/where-one-citizen/css/where-one-citizen.css
@@ -4,6 +4,13 @@
 
 
 
+@font-face {
+font-family: 'Vegur';
+src: url('../fonts/VegurLight.otf');
+}
+
+
+
 #guidance-div
 {
     font-family: 'Lato', sans-serif;
