--- a/css/index.css
+++ b/css/index.css
@@ -767,6 +767,11 @@
     font-size: larger;
 }
 
+#doingA8 {
+    color: #346;
+    font-size: larger;
+}
+
 
 
 .center-div:hover #price-part span {
