--- a/css/index.css
+++ b/css/index.css
@@ -772,6 +772,11 @@
     font-size: larger;
 }
 
+#doingA9 {
+    color:#642;
+    font-size: larger;
+}
+
 
 
 .center-div:hover #price-part span {
